[package]
name = "libecdsautil-sys"
version = "0.1.0"
links = "ecdsautil"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.60.1"
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
